--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="./styles.css" />
     <script src="./scripts.js"></script>
-    <link rel="icon" type="image/jpg" href="./imgs/favicon.jpg" />  
+    <link rel="icon" type="image/jpg" href="./imgs/DL.jpg" />  
   </head>
   <body>
     <header>
@@ -32,7 +32,7 @@
             <a href="#projects">Projects</a>
           </li>
           <li>
-            <a href="mailto:hossein.sabbaghpour@gmail.com" class="button"
+            <a href="mailto:hossein.@gmail.com" class="button"
               >Contact Me</a
             >
           </li>
@@ -63,7 +63,7 @@
           <div>
             <h1>
               <small>Hi I'm</small>
-              Alex Sabbaghpour
+              Alex 
             </h1>
             <p>
               Picture this: I've spent over a decade rocking the wireless world
@@ -85,7 +85,7 @@
                 View Resume
               </a>
               <a
-                href="mailto:hossein.sabbaghpour@gmail.com"
+                href="mailto:hossein.@gmail.com"
                 class="button white"
               >
                 Contact Me
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="hero-yellow" style="display: flex; justify-content: center; align-items: center;">
-            <img src="./imgs/Amir_pic.JPG" alt="Alex Sabbaghpour" style="max-width: 100%; max-height: 100%;" />
+            <img src="./imgs/Amir_pic.JPG" alt="Alex " style="max-width: 100%; max-height: 100%;" />
           </div>
           
         </div>
@@ -182,7 +182,7 @@
           <div class="right-column">
             <h3>A bit about me</h3>
             <p>
-              Welcome to my digital hub! I'm Alex Sabbaghpour, your resident
+              Welcome to my digital hub! I'm Alex , your resident
               wireless maestro and data science enthusiast. Diving Deep:
               Currently, I'm not just slinging code; I'm diving headfirst into
               ML, deep learning, and LLM projects to supercharge my AI game.
