--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="./styles.css" />
     <script src="./scripts.js"></script>
-    <link rel="icon" type="imgag/jpg" href="./imgs/Amir_pic.jpg" />  
+    <link rel="icon" type="image/jpg" href="./imgs/Amir_pic.JPG" /> 
   </head>
   <body>
     <header>
