--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
               </a>
             </div>
             <div class="social-links">
-              <a href="#">
+              <a href="https://github.com/hsabaghpour">
                 <img src="./imgs/github.png" alt="GitHub" width="48" />
               </a>
-              <a href="#">
+              <a href="https://www.linkedin.com/in/hossein-sabbaghpour/">
                 <img src="./imgs/linkedin.png" alt="LinkedIn" width="48" />
               </a>
             </div>
