--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="#projects">Projects</a>
           </li>
           <li>
-            <a href="mailto:hossein.@gmail.com" class="button"
+            <a href="mailto:hossein.sabbaghpour@gmail.com" class="button"
               >Contact Me</a
             >
           </li>
