--- a/index.html
+++ b/index.html
@@ -194,11 +194,10 @@
           </div>
         </div>
       </section>
-      <section class="work-experience container">
-        <h2>
-          <small>Recent</small>
-          Work Experiences and Projects
-        </h2>
+      <section id="work-experience" class="work-experience container">
+      <h2>
+        Work Experiences and Projects
+      </h2>
         <div class="jobs">
           <article>
             <figure>
