--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="#skills">Skills</a>
           </li>
           <li>
-            <a href="#projects">Projects</a>
+            <a href="#work-experience">Projects</a>
           </li>
           <li>
             <a href="mailto:hossein.sabbaghpour@gmail.com" class="button"
