--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 View Resume
               </a>
               <a
-                href="mailto:hossein.@gmail.com"
+                href="mailto:hossein.sabbaghpour@gmail.com"
                 class="button white"
               >
                 Contact Me
