--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               it. I'm currently looking for new opportunities so if you have a
               project you think I'd be a good fit for, please get in touch!
             </p>
-            <a href="./Sample_Resume_Template.pdf" class="button black"
+            <a href="./Hossein_Sabbaghpour_Resume_Data_Scientist_portfolio.pdf" class="button black"
               >Download Resume</a
             >
           </div>
