--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div>
             <h1>
               <small>Hi I'm</small>
-              Alex 
+              Hossein 
             </h1>
             <p>
               Picture this: I've spent over a decade rocking the wireless world
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="hero-yellow" style="display: flex; justify-content: center; align-items: center;">
-            <img src="./imgs/Amir_pic.JPG" alt="Alex " style="max-width: 100%; max-height: 100%;" />
+            <img src="./imgs/Amir_pic.JPG" alt="Hossein " style="max-width: 100%; max-height: 100%;" />
           </div>
           
         </div>
@@ -182,7 +182,7 @@
           <div class="right-column">
             <h3>A bit about me</h3>
             <p>
-              Welcome to my digital hub! I'm Alex , your resident
+              Welcome to my digital hub! I'm Hossein , your resident
               wireless maestro and data science enthusiast. Diving Deep:
               Currently, I'm not just slinging code; I'm diving headfirst into
               ML, deep learning, and LLM projects to supercharge my AI game.
@@ -310,7 +310,7 @@
             <div class="chat-message">
               <input
                 type="text"
-                placeholder="Hey Alex, what skills are you best at?"
+                placeholder="Hey Hossein, what skills are you best at?"
               />
               <button class="button black">Send</button>
             </div>
