--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <figcaption>Clustering- K K-Nearest NBR</figcaption>
               </div>
             </figure>
-            <h3> California Housing Model</h3>
+            <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/CA_Housing_Linear_and_Decision_Tree_and_Random_Forest_wth_Fine_Tuning.ipynb"><h3>California Housing Model</h3></a>
             <div>2024</div>
             <p>
                 In this project, I'll demonstrate a machine learning example 
