--- a/index.html
+++ b/index.html
@@ -222,11 +222,13 @@
           <article>
             <figure>
               <div>
+                <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/CA_Housing_Linear_and_Decision_Tree_and_Random_Forest_wth_Fine_Tuning.ipynb">
                 <img
                   src="./imgs/Clustering K-Nearest.png"
                   alt="Custering"
                   width="100%"
                 />
+                </a>
                 <figcaption>Clustering- K K-Nearest NBR</figcaption>
               </div>
             </figure>
