--- a/index.html
+++ b/index.html
@@ -202,21 +202,31 @@
           <article>
             <figure>
               <div>
+               <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/Support_Vector_Machine">
                 <img
-                  src="./imgs/FA8A7B1C-54FE-4A0A-9884-D92FD4F6097A.jpeg"
-                  alt="TELUS office - RF Engineering and data analytics" 
+                  src="./imgs/SVM.png"
+                  alt="SVM" 
                   width="100%"
                 />
-                <figcaption>TELUS office</figcaption>
+                </a>
+                <figcaption>Support Vector Machine</figcaption>
               </div>
             </figure>
-            <h3>RF Engineering and data analytics</h3>
-            <div>2019-2024</div>
+            <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/Support_Vector_Machine">
+            <h3>Support Vector Machine trial on IRIS data set</h3>
+            </a>
+            <div>2024</div>
             <p>
-                I proudly served as an RF engineer and data scientist at Telus 
-                for the past five years. Working alongside a highly talented team, 
-                I've gained invaluable experience and contributed to several successful projects,
-                 including SWAP and Automations!
+              Exploring Support Vector Machines (SVMs) with 
+              the Iris dataset! SVMs shine in classification, 
+              regression, and outlier detection, particularly with smaller 
+              datasets like Iris. The Linear SVM method seeks the widest 
+              street (large margin) to separate classes using support vectors, 
+              emphasizing the importance of scaled features. 
+              Soft Margin, on the other hand, offers flexibility 
+              by balancing margin width and violations, controlled by 
+              the CCC parameter. My recent work with the Iris dataset 
+              using SVMs is available on my GitHub page
             </p>
           </article>
           <article>
