--- a/index.html
+++ b/index.html
@@ -265,12 +265,11 @@
                 <figcaption>Our Business</figcaption>
               </div>
             </figure>
-            <h3>S&A intelegence</h3>
+            <h3>Coming Soon ...</h3>
             <div>2023 - present</div>
             <p>
-                An organization, spanning from small to large businesses, 
-                dedicated to providing comprehensive guidance and support 
-                in data science and analytics.
+              Please stay tuned, new project will get uploaded soon!
+              Hooorayyy!!!
             </p>
           </article>
         </div>
