--- a/index.html
+++ b/index.html
@@ -262,11 +262,10 @@
                   alt="Salma&I"
                   width="100%"
                 />
-                <figcaption>Our Business</figcaption>
+                <figcaption>Coming soon !</figcaption>
               </div>
             </figure>
             <h3>Coming Soon ...</h3>
-            <div>2023 - present</div>
             <p>
               Please stay tuned, new project will get uploaded soon!
               Hooorayyy!!!
