--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 ChatGPT into my projects these days.</span>
             </p>
             <div class="call-to-action">
-              <a href="./Hossein_Sabbaghpour_Resume_Data_Scientist_portfolio.pdf" class="button black">
+              <a href="./HS_DS_RS2.pdf" class="button black">
                 View Resume
               </a>
               <a
