--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <figure>
               <div>
                 <img
-                  src="./imgs/94B7F0C2-A4EC-45DC-A83D-C0BF9F6A811F_1_105_c.jpeg"
+                  src="./imgs/Keras.png"
                   alt="Salma&I"
                   width="100%"
                 />
