--- a/index.html
+++ b/index.html
@@ -254,6 +254,28 @@
 
             </p>
           </article>
+                    <article>
+            <figure>
+              <div>
+                <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/Keras">
+                <img
+                  src="./imgs/Keras_items.png"
+                  alt="Keras"
+                  width="100%"
+                />
+                </a>
+                <figcaption>Image Classifier Using Keras</figcaption>
+              </div>
+            </figure>
+            <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/Keras"><h3>Image Classifier Using Keras</h3></a>
+            <div>2024</div>
+            <p>
+             In this project, we'll use Keras and the Sequential API to build an image classifier for the Fashion MNIST dataset. Unlike the simpler MNIST dataset of handwritten digits, Fashion MNIST consists of 70,000 grayscale images (28 × 28 pixels) of various fashion items, spread across 10 classes.
+
+              Despite its similarity in format to MNIST, Fashion MNIST is more challenging, with simple models achieving only around 83% accuracy compared to MNIST's 92%. Our goal is to load this dataset, build and train the classifier using Keras, and demonstrate its ability to handle complex image classification tasks effectively.
+            </p>
+          </article>
+
           <article>
             <figure>
               <div>
