--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
               <div>
                 <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/Keras">
                 <img
-                  src="./imgs/Keras_items.png"
+                  src="./imgs/Keras_nat_net.png"
                   alt="Keras"
                   width="100%"
                 />
