--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <figure>
               <div>
                 <img
-                  src="./imgs/Keras.png"
+                  src="./imgs/PyTorch.png"
                   alt="Salma&I"
                   width="100%"
                 />
