--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
               emphasizing the importance of scaled features. 
               Soft Margin, on the other hand, offers flexibility 
               by balancing margin width and violations, controlled by 
-              the CCC parameter. My recent work with the Iris dataset 
+              the C parameter. My recent work with the Iris dataset 
               using SVMs is available on my GitHub page
             </p>
           </article>
