--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <div>
           <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/Support_Vector_Machine" >
            <img
-             src="./imgs/CNN_TF.png"
+             src="./imgs/CNN_TF2.png"
              alt="SVM" 
              width="100%"
            />
@@ -315,7 +315,10 @@
           <br> 
           <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
         </a>
-        <div> <br> Image Classifier with Keras </div>
+       <div> 
+  <br> 
+  <strong>Deploying CNN Image Classification with TensorFlow</strong>
+</div>
         <p>
           <br>
             
