--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                       <br>
             </a>
             <br>
-            <div>Support_Vector_Machine</div>
+            <div><strong>Support_Vector_Machine</strong></div>
             <br>
             <p>
               Exploring Support Vector Machines (SVMs) with 
@@ -256,7 +256,7 @@
               </a>
             </div>
               <br>
-              <div>California Housing Model</div>
+              <div><strong>California Housing Model</strong></div>
               <br>
             <p>
                 In this project, I'll demonstrate a machine learning example 
@@ -280,7 +280,7 @@
                       <br> 
                       <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
                     </a>
-                    <div> <br> Image Classifier with Keras </div>
+                    <div> <br> <strong> Image Classifier with Keras </strong></div>
                     <p>
                       <br>
                         In this project, we'll use Keras and the Sequential API to build an image classifier for the Fashion MNIST dataset. Unlike the simpler MNIST dataset of handwritten digits, Fashion MNIST consists of 70,000 grayscale images (28 × 28 pixels) of various fashion items, spread across 10 classes.
@@ -350,7 +350,7 @@ for tasks like semantic segmentation, where retaining spatial information is cru
         <br> 
         <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
       </a>
-      <div> <br> Comming Soon ... </div>
+      <div> <br> <strong>Comming Soon ... </strong></div>
       <p>
         <br>
           
