--- a/index.html
+++ b/index.html
@@ -322,16 +322,25 @@
         <p>
           <br>
             
-CNNs offer several advantages over fully connected DNNs for image classification.
-They have fewer parameters, making them faster to train and less prone to overfitting. 
-CNNs can detect features anywhere in an image, allowing for better generalization with
-fewer training examples. Additionally, CNN architectures embed prior knowledge about pixel 
-organization, which helps in identifying features at different scales. For instance, a 
-CNN might have 903,400 parameters and require about 12.6 MB of RAM for prediction. 
-To address GPU memory issues during training, strategies like reducing batch size or using 16-bit floats can help. 
-Innovations in CNNs, such as skip connections in ResNet or separable convolutions in Xception, 
-have pushed the boundaries of model depth and efficiency. Fully Convolutional Networks (FCNs) are specialized CNNs 
-for tasks like semantic segmentation, where retaining spatial information is crucial.       
+Excited to share my latest project on Convolutional Neural Networks (CNNs) 
+          with TensorFlow and Keras! This project explores various aspects of CNNs, 
+          including custom convolutional layers with padding and strides, visualization of 
+          feature maps, and experimentation with Max Pooling and custom Depth Pooling layers. 
+          Data augmentation techniques such as Random Flip, Rotation, and Contrast were applied to augment 
+          training data, and the impact of pooling on feature maps was illustrated. Transfer learning was 
+          leveraged using pre-trained ResNet50 and Xception models for image classification, with fine-tuning 
+          to improve accuracy. A custom CNN was also built and trained for the TF Flowers dataset, achieving 
+          impressive accuracy and visualized predictions. The project demonstrates the effectiveness of various 
+          CNN architectures, achieving high accuracy on datasets like MNIST, Fashion MNIST, and TF Flowers.
+          Utilizing transfer learning significantly enhanced model performance. Check out the detailed 
+          implementation and visualizations on my GitHub profile.
+
+
+
+
+
+
+     
  </p>
     </article>
 
