--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/Support_Vector_Machine/Support_Vector_Machines.ipynb">
               <br>
 
-                      <h2 class="button-like"> Click  here for the Jupyter Notebook! </h2> 
+                      <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
                       <br>
             </a>
             <br>
@@ -252,7 +252,7 @@
             
               <br>
               <div>
-              <h2 class="button-like"> Click  here for the Jupyter Notebook! </h2> 
+              <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
               </a>
             </div>
               <br>
@@ -344,7 +344,41 @@ Excited to share my latest project on Convolutional Neural Networks (CNNs)
  </p>
     </article>
 
-    <article>
+
+
+
+             <article>
+      <div>
+        <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/RF_Optimzation_automation" >
+         <img
+           src="./imgs/RF Optimization.png"
+           alt="RF" 
+           width="100%"
+         />
+         </a>
+         <figcaption>RF Optimization project</figcaption>
+       </div>
+      <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/RF_Optimzation_automation/RF_Optimization_Geo_Optimizer.py">
+        <br> 
+        <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
+      </a>
+      <div> <br> <strong>RF optimization of network Top offedar </strong></div>
+      <p>
+        <br>
+          
+
+Welcome to GeoKPIAnalyzer! This Python script automates the
+        discovery of the worst-performing cells in your LTE and 5G 
+        \network by combining KPI analysis with geographical clustering. 
+        It aggregates data at daily, weekly, and monthly levels, compares weekly data to 
+        detect KPI degradations, and predicts future traffic growth with alerts for 
+        capacity expansion. With GeoKPIAnalyzer, you'll get CSV files with detailed analysis 
+        and stunning plots for visualization. Get ready to pinpoint your network's top offenders and 
+        visualize KPI trends effortlessly!    
+</p>
+  </article>
+
+                <article>
       <div>
         <a href="" >
          <img
