--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
          </a>
          <figcaption>RF Optimization project</figcaption>
        </div>
-      <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/RF_Optimzation_automation/RF_Optimization_Geo_Optimizer.py">
+      <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/RF_Optimzation_automation.py">
         <br> 
         <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
       </a>
@@ -245,7 +245,7 @@ Welcome to GeoKPIAnalyzer! This Python script automates the
                 <figcaption>Support Vector Machine</figcaption>
               </div>
             </figure>
-            <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/Support_Vector_Machine/Support_Vector_Machines.ipynb">
+            <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/Support_Vector_Machine">
               <br>
 
                       <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
@@ -328,7 +328,7 @@ Welcome to GeoKPIAnalyzer! This Python script automates the
            </a>
            <figcaption>Convolutional Neural Network</figcaption>
          </div>
-        <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/TensorFlow_CNN/deep_computer_vision_with_cnns.ipynb">
+        <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/TensorFlow_CNN">
           <br> 
           <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
         </a>
@@ -367,7 +367,7 @@ Excited to share my latest project on Convolutional Neural Networks (CNNs)
                                 <img src="./imgs/fashion_mnist_predictions.png" alt="Keras" width="100%" />
                             </a>
                     </figure>
-                    <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/Keras/Neural_nets_with_keras.ipynb">
+                    <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/Keras">
                       <br> 
                       <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
                     </a>
