--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
          </a>
          <figcaption>RF Optimization project</figcaption>
        </div>
-      <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/RF_Optimzation_automation.py">
+      <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/RF_Optimzation_automation">
         <br> 
         <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
       </a>
