--- a/index.html
+++ b/index.html
@@ -429,24 +429,24 @@ In this project, the challenge of customers leaving the land-line business
 
        <article>
       <div>
-        <a href="" >
+        <a href="https://github.com/hsabaghpour/pytorch-training-playground/blob/main/CNN_on_PyTorch.ipynb" >
          <img
-           src="./imgs/PyTorch.png"
+           src="./imgs/CNN_pooling2.png"
            alt="SVM" 
            width="100%"
          />
          </a>
          <figcaption>Recurrent Neural Network</figcaption>
        </div>
-      <a href="">
+      <a href="https://github.com/hsabaghpour/pytorch-training-playground/blob/main/CNN_on_PyTorch.ipynb">
         <br> 
         <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
       </a>
-      <div> <br> <strong>Comming Soon ... </strong></div>
+      <div> <br> <strong>CNNs on the MNIST Dataset with PyTorch</strong></div>
       <p>
         <br>
           
-Please stay tuned for my PyTorch project! I'm currently working on a deep learning project using PyTorch!     
+a trial on the MNIST dataset using PyTorch and Convolutional Neural Networks (CNNs). Convolutional layers scan images for edges and patterns, ReLU activation functions help recognize complex patterns, and pooling layers summarize features for efficiency. Fully connected layers make the final decisions, with the output layer predicting digits like "7." CNNs are efficient due to local connectivity and shared weights, train faster with fewer parameters, and recognize objects regardless of position. They build knowledge hierarchically and are optimized for modern hardware. My trial visualized convolutional and pooling layers, showing max pooling retains key features while average pooling smooths representation. CNNs are essential for facial recognition, self-driving cars, and medical image analysis, demonstrating their powerful capabilities in image processing.     
 </p>
   </article>
 
