--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ Excited to share my latest project on Convolutional Neural Networks (CNNs)
            </a>
            <figcaption>CNN on PyTorch</figcaption>
          </div>
-        <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/TensorFlow_CNN">
+        <a href="https://github.com/hsabaghpour/pytorch-training-playground/blob/main/CNN_on_PyTorch.ipynb">
           <br> 
           <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
         </a>
