--- a/index.html
+++ b/index.html
@@ -158,12 +158,17 @@
               <li>Statistics</li>
               <li>Machine Learning</li>
               <li>Deep learning</li>
+              <li>LLMs</li>
+              <li>RAG</li>
+              <li>Transformers</li>
+              <li>Image Processing</li>
             </ul>
                     <h3>Cloud Computing</h3>
         <ul>
           <li>AWS ML specialty</li>
           <li>Azure</li>
           <li>GCP</li>
+          <li>Data Piplines</li>
 
         </ul>
             <h3>RF Engineering</h3>
