--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 ChatGPT into my projects these days.</span>
             </p>
             <div class="call-to-action">
-              <a href="./HS_DS_RS2.pdf" class="button black">
-                View Resume
+              <a href="./Machine Learning Specialization certificate Standford Andrew Ng.pdf" class="button black">
+                Certifications
               </a>
               <a
                 href="mailto:hossein.sabbaghpour@gmail.com"
