--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
               <li>Python programming</li>
               <li>R programming</li>
               <li>Statistics</li>
+              <li>SPLUNK</li>
               <li>Machine Learning</li>
               <li>Deep learning</li>
               <li>LLMs</li>
