--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 ChatGPT into my projects these days.</span>
             </p>
             <div class="call-to-action">
-              <a href="./Machine Learning Specialization certificate Standford Andrew Ng.pdf" class="button black">
+              <a href="./Certifications_doc.pdf" class="button black">
                 Certifications
               </a>
               <a
