--- a/index.html
+++ b/index.html
@@ -418,9 +418,9 @@ a trial on the MNIST dataset using PyTorch and Convolutional Neural Networks (CN
            width="100%"
          />
          </a>
-         <figcaption>Logistic Regression</figcaption>
+         <figcaption>XGBOOST Binary Classification</figcaption>
        </div>
-      <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/Logistic_reg_Customer_Churn_Prediction">
+      <a href="https://github.com/hsabaghpour/XGBOOST_TELCO_CHURN_Project">
         <br> 
         <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
       </a>
@@ -428,19 +428,12 @@ a trial on the MNIST dataset using PyTorch and Convolutional Neural Networks (CN
       <p>
         <br>
           
-In this project, the challenge of customers leaving the land-line business 
-        for cable competitors was addressed by using a telecommunications 
-        dataset to predict customer churn. The dataset provided valuable insights 
-        by including customer information such as services signed up for, account 
-        details, and demographic data. Recognizing that retaining customers is more 
-        cost-effective than acquiring new ones, the focus was on identifying which 
-        customers would stay. The process began by preprocessing the data and selecting 
-        relevant features. Logistic Regression from Scikit-learn was used to build the 
-        model, with regularization to address overfitting. The model's performance was
-        then evaluated using metrics like the Jaccard index, confusion matrix, classification
-        report, and log loss. These insights guided the development of targeted 
-        retention strategies, helping to keep customers.    
-</p>
+XGBoost, a cutting-edge machine learning algorithm, excels in handling large, 
+        complex datasets with high accuracy and efficiency. In this project, I 
+        applied XGBoost to model customer churn for a telecom operator, optimizing hyperparameters to 
+        improve predictive performance and provide valuable insights for enhancing customer retention 
+        strategies. Discover how XGBoost can transform data into actionable intelligence.
+
   </article>
 
   </section>
