--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ a trial on the MNIST dataset using PyTorch and Convolutional Neural Networks (CN
       <div>
         <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/Logistic_reg_Customer_Churn_Prediction" >
          <img
-           src="./imgs/Custome_Churn.png"
+           src="./imgs/xgboost_illustration.png"
            alt="SVM" 
            width="100%"
          />
