--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="hero-yellow" style="display: flex; justify-content: center; align-items: center;">
-            <img src="./imgs/Amir_pic.JPG" alt="Hossein " style="max-width: 100%; max-height: 100%;" />
+            <img src="./imgs/Amir_b.JPG" alt="Hossein " style="max-width: 100%; max-height: 100%;" />
           </div>
           
         </div>
