--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="./styles.css" />
     <script src="./scripts.js"></script>
-    <link rel="icon" type="image/jpg" href="./imgs/Amir_b.JPG" /> 
+    <link rel="icon" type="image/jpg" href="./imgs/Amir_C.JPG" /> 
   </head>
   <body>
     <header>
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="hero-yellow" style="display: flex; justify-content: center; align-items: center;">
-            <img src="./imgs/Amir_b.JPG" alt="Hossein " style="max-width: 100%; max-height: 100%;" />
+            <img src="./imgs/Amir_C.JPG" alt="Hossein " style="max-width: 100%; max-height: 100%;" />
           </div>
           
         </div>
