--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ Welcome to GeoKPIAnalyzer! This Python script automates the
                 </a>
               </div>
             </figure>
-            <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/CA_Housing_Linear_and_Decision_Tree_and_Random_Forest_wth_Fine_Tuning.ipynb">
+            <a href="https://github.com/hsabaghpour/GraphBased_LTE_HandoverOptimization">
             
               <br>
               <div>
@@ -296,15 +296,16 @@ Welcome to GeoKPIAnalyzer! This Python script automates the
               </a>
             </div>
               <br>
-              <div><strong>California Housing Model</strong></div>
+              <div><strong>LTE Handover Optimization: Graph ML & GNN Approache</strong></div>
               <br>
             <p>
-                In this project, I'll demonstrate a machine learning example 
-                within a real estate context. We'll cover essential steps, 
-                including dataset acquisition, exploration, and visualization,
-                 model training with linear regression, Decision Tree, and Random Forest, 
-                 comparing their performances, and fine-tuning the best model. Finally,
-                  we'll present the solution and discuss system deployment and maintenance!
+This project focus on optimizing handover success rates in an LTE network by modeling eNodeBs as 
+              nodes and NBR relations as edges. The first approach uses Graph-Based Machine Learning, 
+              where a logistic regression model is applied to predict and adjust NBR relations based on features such
+              as node degree and handover success rate. The second approach utilizes a Graph Neural Network (GNN), which learns 
+              node and edge embeddings to predict successful handovers, using graph convolutions to aggregate information from
+              neighboring nodes. Both methods aim to enhance network performance by eliminating 
+              overshooting NBRs and adding missing connections.
 
             </p>
           </article>
@@ -442,6 +443,40 @@ XGBoost, a cutting-edge machine learning algorithm, excels in handling large,
             <section id="work-experience" class="work-experience container">
 
           <div class="jobs">
+
+
+                      <article>
+            <figure>
+              <div>
+                <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/CA_Housing_Linear_and_Decision_Tree_and_Random_Forest_wth_Fine_Tuning.ipynb">
+                <img
+                  src="./imgs/Clustering K-Nearest.png"
+                  alt="Custering"
+                  width="100%"
+                />
+                </a>
+              </div>
+            </figure>
+            <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/CA_Housing_Linear_and_Decision_Tree_and_Random_Forest_wth_Fine_Tuning.ipynb">
+            
+              <br>
+              <div>
+              <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
+              </a>
+            </div>
+              <br>
+              <div><strong>California Housing Model</strong></div>
+              <br>
+            <p>
+                In this project, I'll demonstrate a machine learning example 
+                within a real estate context. We'll cover essential steps, 
+                including dataset acquisition, exploration, and visualization,
+                 model training with linear regression, Decision Tree, and Random Forest, 
+                 comparing their performances, and fine-tuning the best model. Finally,
+                  we'll present the solution and discuss system deployment and maintenance!
+
+            </p>
+          </article>
 
 
 
