--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@ Welcome to GeoKPIAnalyzer! This Python script automates the
           <article>
             <figure>
               <div>
-                <a href="https://github.com/hsabaghpour/ML-Projects/blob/Machine_Learning_Lab/CA_Housing_Linear_and_Decision_Tree_and_Random_Forest_wth_Fine_Tuning.ipynb">
+                <a href="https://github.com/hsabaghpour/GraphBased_LTE_HandoverOptimization">
                 <img
-                  src="./imgs/Clustering K-Nearest.png"
+                  src="./imgs/GNN.png"
                   alt="Custering"
                   width="100%"
                 />
